@@ -1,4 +1,5 @@
 mobac.mapsources.mappacks.openstreetmap.CloudMade
+mobac.mapsources.mappacks.openstreetmap.BingMapsOSM
 mobac.mapsources.mappacks.openstreetmap.Mapnik
 mobac.mapsources.mappacks.openstreetmap.TilesAtHome
 mobac.mapsources.mappacks.openstreetmap.CycleMap
